--- a/package.json
+++ b/package.json
@@ -1,48 +1,27 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts-upgradeable": "5.4.0"
+    "@openzeppelin/contracts-upgradeable": "5.4.0",
+    "@openzeppelin/contracts": "5.4.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "dotenv": "^17.2.3",
-    "eslint": "^9.39.1",
-    "hardhat-contract-sizer": "^2.10.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.6",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "hardhat-contract-sizer": "^2.10.1"
   },
   "optionalDependencies": {
-    "@cloudwalk/chainshot": "0.5.2",
-    "@cloudwalk/eslint-config-smart-contracts": "^1.0.0",
-    "@cloudwalk/solidity-prettier-config": "^1.0.0"
+    "@cloudwalk/chainshot": "0.5.2"
   },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "npm run eslint:fix"
-    ],
-    "*.sol": [
-      "npm run prettier:fix"
-    ]
+  "devEngines": {
+    "runtime": {
+      "name": "node",
+      "onFail": "error"
+    }
   },
-  "engines": {
-    "node": ">=24"
-  },
-  "prettier": "@cloudwalk/solidity-prettier-config",
   "scripts": {
-    "prettier": "npm run prettier:fix",
-    "prettier:fix": "prettier --write \"**/*.sol\"",
-    "prettier:check": "prettier --check \"**/*.sol\"",
-    "eslint": "npm run eslint:fix",
-    "eslint:fix": "eslint --fix",
-    "eslint:check": "eslint",
-    "lint": "npm run prettier:check && npm run eslint:check",
-    "lint:fix": "npm run prettier:fix && npm run eslint:fix",
-    "build": "npx hardhat compile",
-    "test": "npx hardhat test",
-    "test:coverage": "npx hardhat coverage",
-    "prepare": "husky",
-    "contracts:size": "npx hardhat size-contracts"
+    "build": "hardhat compile",
+    "test": "hardhat test",
+    "test:coverage": "hardhat coverage",
+    "contracts:size": "hardhat size-contracts"
   }
 }
