--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
+  "name": "@cloudwalk/brlc-asset-transit-desk",
   "dependencies": {
-    "@openzeppelin/contracts-upgradeable": "5.4.0",
-    "@openzeppelin/contracts": "5.4.0"
+    "@openzeppelin/contracts": "5.4.0",
+    "@openzeppelin/contracts-upgradeable": "5.4.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "dotenv": "^17.2.3",
+    "hardhat": "^2.28.0",
     "hardhat-contract-sizer": "^2.10.1"
   },
   "optionalDependencies": {
